<resources>
    <string name="app_name">MVP FITNESS APP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">Alarm Reminder</string>

    <string name="font_bold">fonts/proximanova_bold.otf</string>
    <string name="font_light">fonts/proximanova_light.otf</string>
    <string name="lbs">lbs</string>
    <string name="kg">kg</string>
    <string name="Enter_Weight">Enter Weight</string>
    <string name="Daily_Water_Intake">Your Daily Water Intake is</string>
    <string name="Water_IntakeCalculator">Water IntakeCalculator</string>
    <string name="Calculate_water_intake">Calculate water intake</string>
    <string name="lean_body_mass">Lean Body Mass</string>
    <string name="Enter_Height">Enter Height</string>
    <string name="calculate_lean_body_mass">Calculate Lean Body Mass</string>
    <string name="your_lean_body_mass">Your Lean Body Mass is</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="feet">feet</string>
    <string name="cm">cm</string>
    <string name="View_Chart">View Chart</string>
    <string name="Body_Mass_Index_Calculator">Body Mass Index Calculator</string>
    <string name="Age_Group_Under17">Age Group : Under 17</string>
    <string name="Recommended_BMI">Recommended BMI:</string>
    <string name="Overweight_BMI">Overweight BMI :</string>
    <string name="Obese_BMI">Obese BMI :</string>
    <string name="Extremely_Obese_BMI">Extremely Obese BMI :</string>
    <string name="Age_Group_Under35">Age Group : Under 35</string>
    <string name="Age_Group_Under35over">Age Group : 35 and over</string>
    <string name="Calculate_BMI">Calculate BMI</string>
    <string name="Enter_Age">Enter Age</string>
    <string name="Overweight">Overweight</string>
    <string name="Obese">Obese</string>
    <string name="Normal">Normal</string>
    <string name="Extremely_Obese">Extremely Obese</string>
    <string name="Recommended_BMI_Value">Recommended BMI Value</string>
    <string name="Extremely_Overweight">Extremely Overweight/Obese</string>
    <string name="Extremely_slim">Extremely slim</string>
    <string name="Under_Weight">Under Weight</string>
    <string name="Your_BMI_is">Your BMI is</string>
    <string name="Body_Fat_Calculator">Body Fat Calculator</string>
    <string name="Body_Fat_Percentage_Comparison_Table">Body Fat Percentage Comparison Table</string>
    <string name="Body_Fat_Percentage_for_Men_and_Women">Body Fat Percentage for Men and Women</string>
    <string name="Calculate_Body_Fat">Calculate Body Fat</string>
    <string name="Men_fat">Men(%)</string>
    <string name="Calculate_Daily_Calories_Intake">Calculate Daily Calories Intake</string>
    <string name="Fat_Level">Fat Level</string>
    <string name="Women_fat">Women(%)</string>
    <string name="Very_Low">Very Low</string>
    <string name="Low">Low</string>
    <string name="Average">Average</string>
    <string name="Classification">Classification</string>
    <string name="Essential_Fat">Essential Fat</string>
    <string name="Athletes">Athletes</string>
    <string name="Fitness">Fitness</string>
    <string name="Acceptable">Acceptable</string>
    <string name="Daily_Calories_Intake_Calculator">Daily Calories Intake Calculator</string>
    <string name="Sedentary">Sedentary</string>
    <string name="Select_your_activity_level">Select your activity level :</string>
    <string name="moderately_active">I am moderately active (moderate exercise or sports 3-5 days per week)</string>
    <string name="sedentary">I am sedentary (little or no exercise).</string>
    <string name="lightly_active">I am lightly active (light exercise or sports 1-3 days per week)</string>
    <string name="very_active">I am very active (hard exercise or sports 6-7 days per week)</string>
    <string name="super_active">I am super active (very hard exercise or sports and a physical job or 2x training)</string>
    <string name="Active">Active</string>
    <string name="Age">Age</string>
    <string name="Low_Activity">Low Activity</string>
    <string name="Calorie_Requirements_a_Day_for_Men">Calorie Requirements a Day for Men</string>
    <string name="Calorie_Requirements_a_Day_for_Women">Calorie Requirements a Day for Women</string>
    <string name="To_gain_weight_by">To gain weight by</string>
    <string name="To_lose_weight">To lose weight</string>
    <string name="Recommended_Bodyfat">Recommended Bodyfat</string>
    <string name="To_maintain_current_weight">To maintain current weight</string>
    <string name="Very_High">Very High</string>
    <string name="High">High</string>
    <string name="Your_Body_Fat_is">Your Body Fat is</string>
    <string name="You_need">You need</string>
    <string name="Calories_per_day">Calories per day</string>
    <string name="Calories_per_day_will_cause_you_to_Lose_one_pound_a_week">Calories per day will cause you to Lose one pound a week.</string>
    <string name="Calories_per_day_will_cause_you_to_gain_one_pound_a_week">Calories per day will cause you to gain one pound a week.</string>
    <string name="Your_BMR_is">Your Basal Metabolic Rate is</string>
    <string name="Your_BMR_value_is">Your Daily Calorie intake is :</string>
    <string name="calories">calories</string>
    <string name="calories_each_day_if_you_engage_in_no_activity_for_the_entire_day">calories each day if you engage in no activity for the entire day.</string>
    <string name="This_means_that_your_body_will_burn">This means that your body will burn</string>
    <string name="Select_Your_Gender">Select Your Gender :</string>
    <string name="Light">Light</string>
    <string name="Select_Your_Bodyframe">Select Your Bodyframe :</string>
    <string name="Ideal_Body_Weight_Calculator">Ideal Body Weight Calculator</string>
    <string name="Medium">Medium</string>
    <string name="Heavy">Heavy</string>
    <string name="Your_ideal_body_weight_is">Your ideal body weight is :</string>
    <string name="Your_ideal_body_weight_range_is">Your ideal body weight range is :</string>
    <string name="mg">mg/dl to mmol/l</string>
    <string name="mmol">mmol/l to mg/dl</string>
    <string name="mgdl">md/dl</string>
    <string name="mmol_a">mm/ol/L</string>
    <string name="Enter_Blood_sugar_value">Enter Blood sugar value</string>
    <string name="Blood_Sugar">Your Blood Sugar Level is :</string>
    <string name="reset"><u>Reset</u></string>
    <string name="report">Report</string>
    <string-array name="numbers">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="rt">if (this.genderValue .equals("Female")) {</string>
    <string name="_00_00">00:00</string>
</resources>